# FEWT

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: bundled.js  main.css  resizeBottom.js  resizeSide.js  test.js  xterm.css
js-src/: bundler.js  dioxus_bridge.js  package.json  process_queue.js  terminal.js
src/: components.rs  helpers.rs  main.rs  utils.rs
src/components/: bottom_bar.rs  column_file_explorer.rs  context_menu.rs  file_explorer.rs  file_icon.rs  file_structure.rs  folder_icon.rs  folder_structure.rs  icon_file_explorer.rs  list_file_explorer.rs  resizer_bar.rs  side_bar.rs  terminal.rs  top_bar.rs
src/helpers/: get_entries.rs  get_paths.rs
src/utils/: app_config.rs  context_menu.rs  dioxus_bridge.rs  directory_context.rs  directory_history.rs  extension_detection.rs  file_entry.rs  mode_context.rs  shell_context.rs  terminal_state.rs
