[package]
name = "fewt"
version = "0.1.0"
authors = ["Hjjgregs <grifffjjgregory@outlook.com>", "TheMrCake <antonlichota@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
dioxus-desktop = "0.6"
strum = "0.27"
strum_macros = "0.27"
chrono = "0.4"
wasmer = "3.1.1"
wasmer-wasi = "3.1.1"
tokio = "1.44.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
toml = "0.8.20"
serde_derive = "1.0"
cocoa = "0.26.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
